# OpenStreetMap-Qt-Plugin

./: CMakeLists.txt  MapItem.cpp  MapItem.h  MapQuickItem.cpp  MapQuickItem.h  main.cpp  main.cpp_.cpp  main.qml
Map/: map.pro  map_plugin.cpp  map_plugin.h  qmldir
qtlocation/: main.qml  zemap.pro
