project(Maps)
cmake_minimum_required(VERSION 2.8)
aux_source_directory(. SRC_LIST)
add_executable(${PROJECT_NAME} ${SRC_LIST})



CMAKE_MINIMUM_REQUIRED (VERSION 2.8)
SET (TARGET Maps)
PROJECT (${TARGET})

FIND_PACKAGE (Qt5Gui REQUIRED)
# FIND_PACKAGE (Marble REQUIRED)
set(MARBLE_DIR "" CACHE PATH "")

MESSAGE(${MARBLE_DIR})

INCLUDE (${QT_USE_FILE})
# INCLUDE_DIRECTORIES (${MARBLE_INCLUDE_DIR})
SET (LIBS ${LIBS}  ${QT_LIBRARIES})

ADD_EXECUTABLE (${TARGET} main.cpp)
TARGET_LINK_LIBRARIES (${TARGET} ${LIBS})
